[gd_scene load_steps=9 format=2]

[ext_resource path="res://World/Tower/Pieces/MachinePiece.gd" type="Script" id=1]
[ext_resource path="res://World/Tower/SmokeParticle/embers.png" type="Texture" id=2]
[ext_resource path="res://World/Tower/Pieces/heat-glow.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 31
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.740741, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 8, 8, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.6
angular_velocity = 113.68
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 3 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[node name="MachinePiece" type="Node2D" groups=[
"machine_piece",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Embers" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 8, 8 )
emitting = false
amount = 20
lifetime = 3.0
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 8 )
shape = SubResource( 5 )

[node name="StopEmberTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
max_distance = 300.0
bus = "sound"

[node name="HeatGlow" type="Sprite" parent="."]
modulate = Color( 0.831373, 0.305882, 0.321569, 0 )
z_index = 50
texture = ExtResource( 3 )
offset = Vector2( 8, 8 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="StopEmberTimer" to="." method="_on_StopEmberTimer_timeout"]
